[build-system]
build-backend = "flit.buildapi"
requires = [
    "flit",
]

[project]
authors = [
    { name = "Kieran Ryan" },
]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
]
description = "A sample Python package."
dynamic = [
    "version",
]
name = "pysamplelib"
readme = "README.md"

[project.urls]
Documentation = "https://kieran-ryan.github.io/python-package-template/"
Source = "https://github.com/kieran-ryan/python-package-template"
Tracker = "https://github.com/kieran-ryan/python-package-template/issues"

[tool.bandit]
exclude_dirs = [
    "tests",
    "venv",
]

[tool.black]
preview = true

[tool.coverage.html]
directory = "docs/coverage"

[tool.coverage.report]
exclude_lines = [
    "if typing.TYPE_CHECKING:",
]
fail_under = 90.0
show_missing = true

[tool.coverage.run]
branch = true
omit = [
    "*/tests/*",
    "*/venv/*",
]

[tool.coverage.xml]
output = "docs/coverage/coverage.xml"

[tool.flit.module]
name = "pysamplelib"

[tool.isort]
profile = "black"
src_paths = "pysamplelib"

[tool.mypy]
exclude = "__init__.py|setup.py|docs|tests|venv"
files = "."
mypy_path = "pysamplelib"

[tool.pylint]
ignore = [
    "docs",
    "tests",
    "venv",
]
recursive = true

[tool.pytest.ini_options]
addopts = "--doctest-modules -rA --verbose"
testpaths = [
    "pysamplelib",
    "tests",
]

[tool.radon]
exclude = "tests/*,venv/*"
show_complexity = true
show_mi = true
total_average = true

[tool.ruff]
ignore = [
    "ANN",
    "ARG",
    "D203",
    "D213",
    "DTZ005",
    "G004",
    "INP001",
    "S101",
    "T201",
]
select = [
    "ALL",
    "I002",
]

[tool.ruff.isort]
required-imports = [
    "from __future__ import annotations",
]

[tool.ruff.pydocstyle]
convention = "google"
