[build-system]
build-backend = "flit.buildapi"
requires = [
    "flit",
]

[project]
authors = [
    { name = "Kieran Ryan" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "behave>=1.2.6",
    "cucumber-expressions>=10.2.0",
]
description = "Behave step matcher for Cucumber Expressions."
dynamic = [
    "version",
]
name = "behave-cucumber-matcher"
readme = "README.md"
requires-python = ">=3.7"

[project.license]
file = "LICENSE"

[project.urls]
Changelog = "https://github.com/kieran-ryan/behave-cucumber-matcher/blob/main/CHANGELOG.md"
Documentation = "https://github.com/kieran-ryan/behave-cucumber-matcher/blob/main/README.md"
Source = "https://github.com/kieran-ryan/behave-cucumber-matcher"
Tracker = "https://github.com/kieran-ryan/behave-cucumber-matcher/issues"

[tool.coverage.html]
directory = "docs/coverage"

[tool.coverage.report]
exclude_lines = [
    "if typing.TYPE_CHECKING:",
]
fail_under = 90.0
show_missing = true

[tool.coverage.run]
branch = true
omit = [
    "*/features/*",
    "*/tests/*",
    "*/venv/*",
]

[tool.coverage.xml]
output = "docs/coverage/coverage.xml"

[tool.flit.module]
name = "behave_cucumber_matcher"

[tool.isort]
profile = "black"
src_paths = "behave_cucumber_matcher"

[tool.mypy]
exclude = "tests|venv"
files = "."
ignore_missing_imports = true
mypy_path = "behave_cucumber_matcher"

[tool.pylint]
ignore = [
    "docs",
    "tests",
    "venv",
]
recursive = true

[tool.pytest.ini_options]
addopts = "--doctest-modules -rA --verbose"
testpaths = [
    "behave_cucumber_matcher",
    "tests",
]

[tool.radon]
exclude = "tests/*,venv/*"
show_complexity = true
show_mi = true
total_average = true

[tool.ruff]
ignore = [
    "ANN",
    "COM812",
    "FA100",
    "INP001",
    "ISC001",
    "PERF",
    "S101",
    "UP007",
    "UP008",
    "UP009",
    "UP035",
]
select = [
    "ALL",
]

[tool.ruff.pydocstyle]
convention = "google"
